[gd_scene load_steps=26 format=2]

[ext_resource path="res://addons/github-integration/fonts/W95FA.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Clock.gd" type="Script" id=2]
[ext_resource path="res://spaceship.png" type="Texture" id=3]
[ext_resource path="res://wallSpaceInvaders.tscn" type="PackedScene" id=4]
[ext_resource path="res://StartButton.gd" type="Script" id=5]
[ext_resource path="res://playerSpaceInvader.tscn" type="PackedScene" id=6]
[ext_resource path="res://alienSpaceInvader.tscn" type="PackedScene" id=7]
[ext_resource path="res://DesktopIconSpaceInvaders.gd" type="Script" id=8]
[ext_resource path="res://SpaceInvaders.gd" type="Script" id=9]
[ext_resource path="res://CorruptionProgressBar.gd" type="Script" id=10]
[ext_resource path="res://desktop.gd" type="Script" id=11]
[ext_resource path="res://WelcomeLabel.gd" type="Script" id=12]
[ext_resource path="res://SnakeIcon.png" type="Texture" id=13]
[ext_resource path="res://DesktopIconSnake.gd" type="Script" id=14]
[ext_resource path="res://ColorRect2.gd" type="Script" id=15]
[ext_resource path="res://Icons.gd" type="Script" id=16]
[ext_resource path="res://Key_text.gd" type="Script" id=17]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.647059, 0.647059, 0.647059, 1 )
border_color = Color( 0.54902, 0.54902, 0.54902, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.537255, 0.537255, 0.537255, 1 )
border_color = Color( 0.54902, 0.54902, 0.54902, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.831373, 0.815686, 0.784314, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.831373, 0.815686, 0.784314, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.831373, 0.815686, 0.784314, 1 )

[sub_resource type="DynamicFont" id=8]
size = 29
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[node name="desktop" type="Node2D"]
script = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 472, 248 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.00392157, 0.509804, 0.505882, 1 )

[node name="shader" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 15 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 568.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="StartButton" type="MenuButton" parent="HBoxContainer"]
margin_right = 113.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "START"
icon = ExtResource( 3 )
flat = false
expand_icon = true
items = [ "Return to main menu", ExtResource( 3 ), 0, false, false, 0, 0, null, "", false, "Quit", ExtResource( 3 ), 0, false, false, 1, 0, null, "", false ]
script = ExtResource( 5 )

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 113.0
margin_right = 227.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 3 )
text = "Welcome"
align = 1
valign = 1
script = ExtResource( 12 )

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_left = 227.0
margin_right = 341.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="Panel2" type="Panel" parent="HBoxContainer"]
visible = false
margin_left = 307.0
margin_right = 409.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="Panel3" type="Panel" parent="HBoxContainer"]
margin_left = 341.0
margin_right = 455.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="Panel4" type="Panel" parent="HBoxContainer"]
margin_left = 455.0
margin_right = 568.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="Panel5" type="Panel" parent="HBoxContainer"]
margin_left = 568.0
margin_right = 682.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="Panel6" type="Panel" parent="HBoxContainer"]
margin_left = 682.0
margin_right = 796.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="Panel7" type="Panel" parent="HBoxContainer"]
margin_left = 796.0
margin_right = 910.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="Clock" type="Label" parent="HBoxContainer"]
margin_left = 910.0
margin_right = 1024.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 3 )
text = "7:55 PM"
align = 1
valign = 1
script = ExtResource( 2 )

[node name="StartMenu" type="VBoxContainer" parent="."]
visible = false
margin_top = 272.0
margin_right = 224.0
margin_bottom = 600.0

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 288.0
margin_top = 8.0
margin_right = 736.0
margin_bottom = 22.0
script = ExtResource( 10 )

[node name="Icons" type="VBoxContainer" parent="."]
margin_right = 149.0
margin_bottom = 179.0
custom_constants/separation = 28
script = ExtResource( 16 )

[node name="SpaceInvadersContainer" type="VBoxContainer" parent="Icons"]
margin_right = 149.0
margin_bottom = 82.0

[node name="TextureRect" type="TextureRect" parent="Icons/SpaceInvadersContainer"]
margin_right = 149.0
margin_bottom = 64.0
texture = ExtResource( 3 )
stretch_mode = 6
script = ExtResource( 8 )
idle_texture = ExtResource( 3 )
hover_texture = ExtResource( 3 )

[node name="SpaceInvaders" type="WindowDialog" parent="Icons/SpaceInvadersContainer/TextureRect"]
visible = true
margin_left = 462.0
margin_top = 215.0
margin_right = 962.0
margin_bottom = 550.0
popup_exclusive = true
window_title = "Galaxy Raiders"
resizable = true
script = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders"]
margin_right = 500.0
margin_bottom = 335.0
color = Color( 0, 0, 0, 1 )

[node name="Wall" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" instance=ExtResource( 4 )]
position = Vector2( 506, 329 )

[node name="Wall2" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" instance=ExtResource( 4 )]
position = Vector2( -6, 329 )

[node name="Player" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" instance=ExtResource( 6 )]
position = Vector2( 242, 313 )

[node name="Wall3" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" instance=ExtResource( 4 )]
position = Vector2( 250, -7 )
scale = Vector2( 25, 1 )

[node name="Wall4" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" instance=ExtResource( 4 )]
position = Vector2( 250, 345 )
scale = Vector2( 25, 1 )

[node name="Alien" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 26, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien2" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 66, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien3" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 106, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien4" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 146, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien5" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 186, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien6" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 226, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien7" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 266, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien8" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 306, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien9" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 346, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien10" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 386, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien11" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 426, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien12" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 466, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien13" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 26, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien14" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 66, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien15" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 106, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien16" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 146, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien17" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 186, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien18" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 226, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien19" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 266, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien20" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 306, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien21" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 346, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien22" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 386, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien23" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 426, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien24" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 7 )]
position = Vector2( 466, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="GameOverScreen" type="MarginContainer" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders"]
margin_right = 500.0
margin_bottom = 337.0

[node name="ColorRect" type="ColorRect" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders/GameOverScreen"]
margin_right = 500.0
margin_bottom = 337.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders/GameOverScreen"]
margin_right = 500.0
margin_bottom = 337.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "GAME OVER"
align = 1
valign = 1

[node name="WinScreen" type="MarginContainer" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders"]
margin_right = 500.0
margin_bottom = 337.0

[node name="ColorRect" type="ColorRect" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders/WinScreen"]
margin_right = 500.0
margin_bottom = 337.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders/WinScreen"]
margin_right = 500.0
margin_bottom = 337.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "YOU WIN"
align = 1
valign = 1

[node name="Label" type="Label" parent="Icons/SpaceInvadersContainer"]
margin_top = 68.0
margin_right = 149.0
margin_bottom = 82.0
text = "Galaxy Raiders"
align = 1

[node name="SnakeContainer" type="VBoxContainer" parent="Icons"]
margin_top = 110.0
margin_right = 149.0
margin_bottom = 168.0
alignment = 1

[node name="Snake" type="TextureRect" parent="Icons/SnakeContainer"]
margin_right = 149.0
margin_bottom = 40.0
texture = ExtResource( 13 )
stretch_mode = 6
script = ExtResource( 14 )
idle_texture = ExtResource( 13 )

[node name="SnakeDialog" type="WindowDialog" parent="Icons/SnakeContainer/Snake"]
visible = true
margin_left = 363.0
margin_top = 48.0
margin_right = 863.0
margin_bottom = 403.0
popup_exclusive = true
window_title = "Serpent"
resizable = true

[node name="Label" type="Label" parent="Icons/SnakeContainer"]
margin_top = 44.0
margin_right = 149.0
margin_bottom = 58.0
text = "Serpent"
align = 1

[node name="Key_text" type="Label" parent="."]
margin_left = 472.0
margin_top = 24.0
margin_right = 547.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 9 )
text = "Current_key"
align = 1
script = ExtResource( 17 )

[connection signal="mouse_entered" from="Icons/SpaceInvadersContainer/TextureRect" to="Icons/SpaceInvadersContainer/TextureRect" method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="Icons/SpaceInvadersContainer/TextureRect" to="Icons/SpaceInvadersContainer/TextureRect" method="_on_TextureRect_mouse_exited"]
[connection signal="popup_hide" from="Icons/SpaceInvadersContainer/TextureRect/SpaceInvaders" to="Icons/SpaceInvadersContainer/TextureRect" method="_on_SpaceInvaders_popup_hide"]
[connection signal="focus_entered" from="Icons/SnakeContainer/Snake" to="." method="_on_Snake_focus_entered"]
[connection signal="focus_entered" from="Icons/SnakeContainer/Snake" to="Icons/SnakeContainer/Snake" method="_on_Snake_focus_entered"]
[connection signal="focus_exited" from="Icons/SnakeContainer/Snake" to="Icons/SpaceInvadersContainer/TextureRect" method="_on_Snake_focus_exited"]
[connection signal="focus_exited" from="Icons/SnakeContainer/Snake" to="Icons/SnakeContainer/Snake" method="_on_Snake_focus_exited"]
[connection signal="mouse_entered" from="Icons/SnakeContainer/Snake" to="Icons/SnakeContainer/Snake" method="_on_Snake_mouse_entered"]
[connection signal="mouse_exited" from="Icons/SnakeContainer/Snake" to="Icons/SnakeContainer/Snake" method="_on_Snake_mouse_exited"]
[connection signal="focus_entered" from="Icons/SnakeContainer/Snake/SnakeDialog" to="Icons/SnakeContainer/Snake" method="_on_SnakeDialog_focus_entered"]
[connection signal="mouse_entered" from="Icons/SnakeContainer/Snake/SnakeDialog" to="Icons/SnakeContainer/Snake" method="_on_SnakeDialog_mouse_entered"]
